# sqllens

./: .devflow-acs-74.md  .devflow-workpad-init.md  .dockerignore  .gitignore  .tmp-workpad-58.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.md  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: require-commit-confirmation.sh  require-push-confirmation.sh
.claude/plugins/devflow/: README.md
.claude/plugins/devflow/.claude-plugin/: plugin.json
.claude/plugins/devflow/agents/: checklist-deduper.md  checklist-generator.md  checklist-verifier.md  github-issue-creator.md
.claude/plugins/devflow/lib/: actionable-patterns.sh  audit-entry.jq  cheap-gate.jq  check-excluded-path.sh  classify-pr-kind.jq  clean-entry.jq  compute-patterns.jq  conf.sh  fetch-pr-context.sh  intervention-surfaces.md  materialize-retrospectives.sh  meta-issue.sh  open-state-pr.sh  post-status.sh  preflight.sh  render-report.sh  scan.sh
.claude/plugins/devflow/lib/test/: run.sh  test_python_scripts.py
.claude/plugins/devflow/scripts/: branch-for-issue.py  config-get.sh  dismiss-stale-rejections.sh  file-deferrals.py  match-deferrals.py  parse-acs.py  workpad.py
.claude/plugins/devflow/skills/audit-implementations/: SKILL.md
.claude/plugins/devflow/skills/create-issue/: SKILL.md
.claude/plugins/devflow/skills/devflow-weekly/: SKILL.md
.claude/plugins/devflow/skills/docs/: SKILL.md
.claude/plugins/devflow/skills/docs-bootstrap-external/: SKILL.md
.claude/plugins/devflow/skills/docs-bootstrap-internal/: SKILL.md
.claude/plugins/devflow/skills/docs-release-notes/: SKILL.md
.claude/plugins/devflow/skills/docs-sync-external/: SKILL.md
.claude/plugins/devflow/skills/docs-sync-internal/: SKILL.md
.claude/plugins/devflow/skills/docs-verify/: SKILL.md
.claude/plugins/devflow/skills/implement/: SKILL.md
.claude/plugins/devflow/skills/pr-description/: SKILL.md
.claude/plugins/devflow/skills/retrospective/: SKILL.md
.claude/plugins/devflow/skills/review/: SKILL.md
.claude/plugins/devflow/skills/review-and-fix/: SKILL.md
.devflow/learnings/: overrides.json  retrospectives.jsonl
.github/: dependabot.yml  project-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/dedupe-pr-events/: action.yml
.github/actions/get-app-token/: action.yml
.github/actions/read-project-config/: action.yml
.github/workflows/: WikiWizard.yml  ci.yml  claude-code-review.yml  claude-implement.yml  claude-runner.yml  claude.yml  close-released-items.yml  comment-on-draft-issues.yml  devflow-plugin-probe.yml  devflow-review.yml  docker.yml  mcpb.yml  move-to-in-progress.yml  release.yml  request-review-on-ready.yml  security-audit.yml  sync-pr-status-to-issue.yml
.tmp/: acs-60.md  plan-60.md  workpad-60-init.md
LICENSES/: THIRD-PARTY.txt
docker/: Dockerfile
docs/internal/: agent-system-prompt.md  claude-desktop-installer.md  claude-desktop-windows-install.md  config-loading.md  production-readiness-v0.1.0.md  tool-scratch-storage.md
docs/internal/agent/: factory.md  memory.md  tool-scratch-storage.md
docs/internal/architecture/: overview.md
docs/internal/authentication/: overview.md
docs/internal/database-connectors/: cleanup-error-handling.md  read-only-safety.md  row-level-security.md
docs/internal/devflow/: file-deferrals.md
docs/internal/installation/: claude-desktop-installer.md  claude-desktop-windows-install.md
docs/internal/mcp-server/: tools.md  transport.md
docs/internal/setup/: config-loading.md  preflight.md
docs/internal/workflows/: implement-skill.md  review-rerun-checks-plan.md  review-rerun-checks.md  sync-pr-status-to-issue.md
examples/mcp-clients/: claude_desktop_http.json  claude_desktop_stdio.json  windsurf.json
examples/sqlite-demo/: README.md  sqllens.toml
mcpb/: README.md  build.sh  launcher.py  manifest.json
scripts/: memory_admin_preview.html  widget_preview.html
src/sqllens/: __init__.py  __main__.py  _errors.py  cli.py  config.py  conversation_store.py  preflight.py  server.py
src/sqllens/agent/: __init__.py  factory.py
src/sqllens/agent/capabilities/agent_memory/: base.py
src/sqllens/agent/components/: __init__.py
src/sqllens/agent/core/: __init__.py  errors.py  registry.py  validation.py
src/sqllens/agent/integrations/: __init__.py
src/sqllens/agent/tools/: __init__.py  agent_memory.py  emit_chart.py  run_sql.py
src/sqllens/auth/: __init__.py  base.py  bearer.py  jwt.py  none.py
src/sqllens/connectors/: __init__.py
src/sqllens/installers/: __init__.py  claude_desktop.py
src/sqllens/memory/: __init__.py  admin.py  exporter.py  importer.py  io.py  schema.py  store.py
src/sqllens/safety/: __init__.py  limits.py  readonly.py  rls.py
src/sqllens/tools/: __init__.py  _agent.py  _format.py  list_data_sources.py  query_database.py  visualize_data.py
src/sqllens/transport/: __init__.py  http.py
src/sqllens/ui/: __init__.py  chart_results.html  memory_admin.html  query_results.html
tests/: conftest.py
tests/integration/: conftest.py  test_connectors.py  test_http_transport.py  test_scrub_inherited.py
tests/unit/: _agent_stubs.py  _config_builders.py  _memory_helpers.py  conftest.py  test_agent_memory_tool.py  test_auth.py  test_chart_payload.py  test_cli.py  test_cli_claude_desktop.py  test_cli_memory.py  test_cli_serve.py  test_config_env_isolation.py  test_config_schema.py  test_config_smoke.py  test_conversation_store.py  test_emit_chart_tool.py  test_factory_wiring.py  test_format.py  test_lockfile_guard.py  test_memory_admin_tools.py  test_memory_import_export.py  test_memory_mcp_tool.py  test_memory_schema_io.py  test_preflight.py  test_query_database.py  test_run_sql_tool_name.py  test_safety.py  test_safety_limits.py  test_safety_rls.py  test_search_memory_threshold.py  test_server.py  test_shared_test_fixtures.py  test_sql_runner_cleanup.py  test_system_prompt.py  test_transport_http.py  test_ui_widget.py  test_visualize_data_tool.py
(+48 files in other folders)
