[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sqllens"
version = "0.0.2"
description = "Natural-language SQL analytics over MCP. Connect any AI assistant to your database."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Radman" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "LICENSES/*"]
keywords = ["mcp", "sql", "nl2sql", "analytics", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.9.0",
    "anthropic>=0.40",
    "chromadb>=0.5",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "sqlglot>=25.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "typer>=0.12",
    "rich>=13",
    "uvicorn[standard]>=0.30",
    "starlette>=0.37",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
all = ["sqllens[postgres,mysql]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
sqllens = "sqllens.cli:app"

[project.urls]
Homepage = "https://github.com/The01Geek/sqllens"
Repository = "https://github.com/The01Geek/sqllens"
Issues = "https://github.com/The01Geek/sqllens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqllens"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The agent framework is treated as vendored code — see CLAUDE.md.
# Auto-formatting it would create huge diffs and complicate the
# audit-against-upstream debugging step. Lint our own code.
# .claude/plugins/devflow/ is similarly vendored from The01Geek/devflow-autopilot;
# its style is governed upstream, and edits here would diverge from source.
extend-exclude = ["src/sqllens/agent", ".claude/plugins/devflow"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API uses ``def cmd(arg = typer.Option(...))`` — flagged by
# B008 but intentional. The library reads the call result at decoration time.
"src/sqllens/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "connectors: integration tests against real Postgres/MySQL service containers (CI-only)",
]
# Sentinel keys via pytest-env. Belt-and-suspenders for the autouse env scrub
# in tests/conftest.py: if any test slips past the scrub and reaches the real
# Anthropic SDK, it fails loudly with an obviously-bad key rather than
# silently authenticating against the developer's real credentials.
env = [
    "D:ANTHROPIC_API_KEY=test-sentinel-do-not-use",
    "D:SQLLENS_LLM__API_KEY=test-sentinel-do-not-use",
]
