[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "sqllens"
version = "0.0.2"
description = "Natural-language SQL analytics over MCP. Connect any AI assistant to your database."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Radman" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "LICENSES/*"]
keywords = ["mcp", "sql", "nl2sql", "analytics", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Conservative upper bounds: cap the next major above each dep's currently
    # released line so a breaking major can't silently land in CI, while
    # ``pip install -e ".[dev,all]"`` still resolves the installed versions.
    "mcp>=1.26.0,<2",
    "anthropic>=0.40,<1",
    "chromadb>=0.5,<2",
    "pydantic>=2.6,<3",
    # >=2.4: `SettingsError` only became a public top-level export in
    # pydantic-settings 2.4.0; `cli.py` imports it at module scope, so a
    # 2.2.x/2.3.x install would ImportError on every `sqllens` entry point.
    "pydantic-settings>=2.4,<3",
    "sqlalchemy>=2.0,<3",
    # Pinned <26: the read-only guard relies on sqlglot's parse tree shape and
    # walk() contract. The bypass corpus (tests/unit/test_safety.py
    # TestCorpusStaysRejected) is the regression net that must stay green
    # before widening this bound.
    "sqlglot>=25.0,<26",
    "pandas>=2.0,<4",
    "pyyaml>=6.0,<7",
    "tomli>=2.0,<3; python_version < '3.11'",
    "typer>=0.12,<1",
    "rich>=13,<16",
    "uvicorn[standard]>=0.30,<1",
    "starlette>=0.37,<2",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
all = ["sqllens[postgres,mysql]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
sqllens = "sqllens.cli:app"

[project.urls]
Homepage = "https://github.com/The01Geek/sqllens"
Repository = "https://github.com/The01Geek/sqllens"
Issues = "https://github.com/The01Geek/sqllens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sqllens"]
include = ["src/sqllens/ui/**/*.html", "src/sqllens/ui/**/*.js"]

# Ship the resolved lockfile (S-12) inside the wheel so the published
# artifact carries a recorded known-good dependency resolution for
# inspection (a point-in-time snapshot, not a CI-verified guarantee —
# see requirements.txt's header). The sdist already carries it
# (hatchling's sdist includes VCS-tracked files, and requirements.txt
# is committed); the wheel only contains the package tree, so it must
# be force-included there.
[tool.hatch.build.targets.wheel.force-include]
"requirements.txt" = "sqllens/requirements.txt"

[tool.ruff]
line-length = 100
target-version = "py311"
# The agent framework is treated as vendored code — see CLAUDE.md.
# Auto-formatting it would create huge diffs and complicate the
# audit-against-upstream debugging step. Lint our own code.
# .claude/plugins/devflow/ is similarly vendored from The01Geek/devflow-autopilot;
# its style is governed upstream, and edits here would diverge from source.
extend-exclude = ["src/sqllens/agent", ".claude/plugins/devflow"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic API uses ``def cmd(arg = typer.Option(...))`` — flagged by
# B008 but intentional. The library reads the call result at decoration time.
"src/sqllens/cli.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not connectors'"
markers = [
    "connectors: integration tests against real Postgres/MySQL service containers (CI-only)",
]
# Sentinel keys via pytest-env. Belt-and-suspenders for the autouse env scrub
# in tests/conftest.py: if any test slips past the scrub and reaches the real
# Anthropic SDK, it fails loudly with an obviously-bad key rather than
# silently authenticating against the developer's real credentials.
#
# These are set UNCONDITIONALLY (no ``D:`` skip-if-set prefix). pytest-env's
# ``D:`` gates on key *presence*, not truthiness — GitHub-hosted runners
# pre-export ``ANTHROPIC_API_KEY=`` / ``ANTHROPIC_BASE_URL=`` (empty), so a
# ``D:`` sentinel is SKIPPED there and the scrub meta-tests would assert
# against an absent/empty var instead of the injected sentinel (vacuous on
# CI). A test session has no legitimate reason to honour an inherited
# real/empty value for any of these keys, so set them outright; the autouse
# scrub still deletes them before each test body.
#
# ``SQLLENS_CONFIG`` is deliberately NOT seeded: pytest-env injects at session
# start while the autouse scrub is function-scoped, so a path-typed sentinel
# would be live for any future session/module fixture or collection-time
# ``Config.load()`` and point it at a nonexistent path. A bogus base URL has
# no such blast radius (the SDK is never called) yet still exercises the
# broader-than-credentials scrub contract.
env = [
    "ANTHROPIC_API_KEY=test-sentinel-do-not-use",
    "SQLLENS_LLM__API_KEY=test-sentinel-do-not-use",
    "SQLLENS_AUTH__BEARER_TOKEN=test-sentinel-do-not-use",
    "ANTHROPIC_BASE_URL=test-sentinel-do-not-use",
]
